# ai_agents

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
Training/LangGraph/01_simple/: langgraph_agent.ipynb
Training/LangGraph/02_descriptive_agent/: langgraph_detailed_agents.ipynb
Training/LangGraph/03_jira/: jira_test.py  langgraph_jira.ipynb  langgraph_jira_without_evaluator.ipynb
Training/LangGraph/03_mcp/: langgraph_mcp.ipynb
Training/LangGraph/04_mcp/: langgraph_mcp.ipynb  mcp_server.py
Training/LangGraph/05_InvoiceReader/: invoice_reader.py
Training/LangGraph/06_AutoLog/: autolog_qa.ipynb  vehicles.json
