[project]
name = "ai-agents"
version = "0.1.0"
description = "AI Agent Training and Testing"
readme = "README.md"
requires-python = "==3.13.2"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "python-dotenv>=0.9.9",
    "gradio>=5.49.1",
    "ipykernel>=7.1.0",
    "langchain>=1.0.5",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.0",
    "langchain-google-genai>=3.0.3",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.3",
    "langgraph-checkpoint-sqlite>=3.0.0",
    "lxml>=6.0.2",
    "playwright>=1.56.0",
    "wikipedia>=1.4.0",
    "uuid7>=0.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]
